   > Blood Pact
   > Flesh Doll
   > Fiery Tablet
   > Seshat's Charm
   > Seshat's Tome
   > Seshat's Teachings
   > Seshat's Opus
   > EXP Supressor
  ~ 11 magic equips:
   > Comet Charm
   > Magic Coin
   > Elemental Lace
   > Conjurer's Harp
   > Fiery Lace
   > Fiery Harp
   > Infernal Coin
   > Dark Orb (Tome)
   > Ice II (Tome)
   > Wyvern's Fury (Tome)
   > Soul Shackles (Tome)
  ~ 3 powers:
   > [REDACTED RESISTANCE]
   > [REDACTED WISDOM]
   > [REDACTED SPIRIT]
  ~ 5 vanities:
   > Bandito Outfit
   > Cavalier Outfit
   > Sorcerer Outfit
   > Bishop Outfit
   > Scapegrace Outfit
 - 45 enemies:
  ~ Living Plant
  ~ Dandy Toad Mage
  ~ Catalyst
  ~ Tortured Soul
  ~ Will o' Wisp
  ~ Fire Spirit
  ~ [REDACTED GENERAL]
  ~ Darkhound
  ~ Beet Boxer
  ~ Baby Turtle
  ~ Giant Turtle
  ~ Feral Bat
  ~ Wind Spirit
  ~ Flytrap
  ~ Horrorspore
  ~ Tarantula
  ~ Baby Ent
  ~ Earth Spirit
  ~ Baby Dragon
  ~ [REDACTED DRAGON]
  ~ [REDACTED BAT]
  ~ [REDACTED SPIRIT]
  ~ [REDACTED SPIRIT]
  ~ [REDACTED SPIRIT]
  ~ [REDACTED SPIRIT]
  ~ Ice Slime
  ~ Ice Golem
  ~ Polar Bear
  ~ Chilling Apparition
  ~ Werewolf
  ~ Mimic
  ~ Sahuagin
  ~ Jellyfish
  ~ Water Spirit
  ~ Gazer
  ~ Parasite
  ~ Feral Rat
  ~ Poltergeist
  ~ [REDACTED SKELETON]
  ~ [REDACTED SKELETON]
  ~ Fire Imp
  ~ Flesh Walker
  ~ [REDACTED]
  ~ Attacker Tellurium Golem
  ~ Defender Tellurium Golem
  ~ [REDACTED BIRD]

Removals:
 - Stat allocation. It was introduced as a method to provide easy character build customization, but overlapped with our preference to make the majority of progression equipment-based.
 - Skill learning. Why click through menus to learn a skill when you could just learn it right as you level up?
 - Job Points. Without stat allocation or skill learning, JP no longer has a use, so why force one?
 - The scale-based buff/debuff system. It was added in Alpha 14, but was kind of shoe-horned in without a reason, as using only states had never been a problem.
 - Many skills: