@@ -5369,5 +5369,47 @@
       0
     ],
     "price": 50
+  },
+  {
+    "id": 204,
+    "atypeId": 1,
+    "description": "Grants 1 extra BP capacity, but only if a different\nparty member has \\ia[205] equipped.",
+    "etypeId": 9,
+    "traits": [],
+    "iconIndex": 127,
+    "name": "Infernal Knight's Synergy",
+    "note": "<Passive State: 197>\n<Cannot Rename>",
+    "params": [
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 0
+  },
+  {
+    "id": 205,
+    "atypeId": 1,
+    "description": "Grants 1 extra BP capacity, but only if a different\nparty member has \\ia[204] equipped.",
+    "etypeId": 9,
+    "traits": [],
+    "iconIndex": 127,
+    "name": "Infernal Mage's Synergy",
+    "note": "<Passive State: 197>\n<Cannot Rename>",
+    "params": [
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 0
   }
 ]
