@@ -5546,7 +5546,7 @@
     ],
     "gold": 1500,
     "name": "Infernal Skeleton Knight",
-    "note": "<Armor Weakness: Bludgeoning>\n<Element: Fire, Dark>\n<Passive State: 57, 136, 137>\n\n<Sideview Battler: Monster4_1>\n<Weapon Image: 266>\n<Attack Animation: 8>\n\n<Enemy Drops>\nMusic Box: 3.33%\nInfernal Sword: 100%\nLarge Potion: 100%\nLarge Potion: 100%\nLarge Potion: 100%\nLarge Ether: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\n</Enemy Drops>\n\n<Night Boost>\nSkeleton Skull: 20% +30%\n</Night Boost>",
+    "note": "<Armor Weakness: Bludgeoning>\n<Element: Fire, Dark>\n<Passive State: 57, 136, 137>\n\n<Sideview Battler: Monster4_1>\n<Weapon Image: 266>\n<Attack Animation: 8>\n\n<Enemy Drops>\nMusic Box: 3.33%\nInfernal Sword: 100%\nInfernal Knight's Synergy: 100%\nLarge Potion: 100%\nLarge Potion: 100%\nLarge Potion: 100%\nLarge Ether: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\n</Enemy Drops>\n\n<Night Boost>\nSkeleton Skull: 20% +30%\n</Night Boost>",
     "params": [
       15000,
       0,
@@ -5607,7 +5607,7 @@
     ],
     "gold": 1500,
     "name": "Infernal Skeleton Mage",
-    "note": "<Armor Weakness: Bludgeoning>\n<Element: Fire, Dark>\n<Passive State: 57, 136, 137>\n\n<Sideview Battler: Monster4_2>\n<Weapon Image: 270>\n<Attack Animation: 147>\n\n<Enemy Drops>\nMusic Box: 3.33%\nInfernal Wand: 100%\nLarge Elixir: 100%\nLarge Elixir: 100%\nLarge Elixir: 100%\nLarge Ether: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\n</Enemy Drops>\n\n<Night Boost>\nSkeleton Skull: 20% +30%\n</Night Boost>",
+    "note": "<Armor Weakness: Bludgeoning>\n<Element: Fire, Dark>\n<Passive State: 57, 136, 137>\n\n<Sideview Battler: Monster4_2>\n<Weapon Image: 270>\n<Attack Animation: 147>\n\n<Enemy Drops>\nMusic Box: 3.33%\nInfernal Wand: 100%\nInfernal Mage's Synergy: 100%\nLarge Elixir: 100%\nLarge Elixir: 100%\nLarge Elixir: 100%\nLarge Ether: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\n</Enemy Drops>\n\n<Night Boost>\nSkeleton Skull: 20% +30%\n</Night Boost>",
     "params": [
       15000,
       0,
