@@ -296,10 +296,12 @@ Additions:
    > Ice II (Tome)
    > Wyvern's Fury (Tome)
    > Soul Shackles (Tome)
-  ~ 3 powers:
+  ~ 5 powers:
    > [REDACTED RESISTANCE]
    > [REDACTED WISDOM]
    > [REDACTED SPIRIT]
+   > [REDACTED SYNERGY]
+   > [REDACTED SYNERGY]
   ~ 5 vanities:
    > Bandito Outfit
    > Cavalier Outfit
